--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header class="bg-blue-900 text-white py-6 shadow-md">
     <div class="container mx-auto px-4 flex items-center justify-between">
       <div class="flex items-center space-x-4">
-        <img src="../logo2.png" alt="Logo Desa Mangaris" class="w-14 h-14 rounded-full border-2 border-white">
+        <img src="logo2.png" alt="Logo Desa Mangaris" class="w-14 h-14 rounded-full border-2 border-white">
         <div>
           <h1 class="text-xl font-bold">Desa Mangaris</h1>
           <p class="text-sm">KKN Reguler I Universitas Palangka Raya 2025 - Kelompok 5</p>
@@ -38,7 +38,7 @@
     <div class="container mx-auto px-4">
       <h3 class="text-2xl font-bold text-blue-800 mb-6">Profil Desa</h3>
       <p class="text-gray-700 leading-relaxed">
-        Desa Mangaris berdiri pada tahun 1963. Desa ini merupakan desa yang terbentuk sebagai pindahan dari mangaris lama. Penduduknya mayoritas beragama kristen, dan bersuku dayak Maanyan dengan tradisi dan budaya yang terus dilestarikan hingga sekarang. Penduduknya rata-rata bekerja sebagai pegawai di pabrik,dan bertani.
+        Desa Mangaris berdiri pada tahun 1963. Desa ini merupakan desa yang terbentuk sebagai pindahan dari mangaris lama. Penduduknya mayoritas beragama kristen, dan bersuku dayak Ma'anyan dengan tradisi dan budaya yang terus dilestarikan hingga sekarang. Penduduknya rata-rata bekerja sebagai pegawai di pabrik dan bertani.
         Desa Mangaris terletak di Kecamatan Dusun Selatan, Kabupaten Barito selatan, Provinsi Kalimanan Tengah, dengan luas wilayah sekitar 40.000 hektare.
       </p>
     </div>
@@ -60,17 +60,17 @@
       <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
         <a href="edukasi-kesehatan.html" class="block">
         <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition">
-            <h4 class="font-semibold text-lg text-blue-700 mb-2">1. Kampanye dan Edukasi Kebersihan Lingkungan</h4>
+            <h4 class="font-semibold text-lg text-blue-700 mb-2">Kampanye dan Edukasi Kebersihan Lingkungan</h4>
         </div>
         </a>
                 <a href="papan-edukasi.html" class="block">
         <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition">
-            <h4 class="font-semibold text-lg text-blue-700 mb-2">2. Pembuatan Papan Edukasi Penguraian Sampah</h4>
+            <h4 class="font-semibold text-lg text-blue-700 mb-2">Pembuatan Papan Edukasi Penguraian Sampah</h4>
         </div>
         </a>
     <a href="gotong-royong.html" class="block">
         <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition">
-            <h4 class="font-semibold text-lg text-blue-700 mb-2">3. Gotong Royong Membersihkan Sungai</h4>
+            <h4 class="font-semibold text-lg text-blue-700 mb-2">Gotong Royong Membersihkan Sungai</h4>
         </div>
         </a>
   </section>
@@ -157,4 +157,5 @@
   <div class="relative container mx-auto px-6 text-left border-t border-gray-400/30 pt-4">
     <p class="italic text-xs scroll-pl-1.5">&copy; 2025 Rina Febrianti - KKN UPR Kelompok 5 Desa Mangaris</p>
   </div>
+
 </footer>
