--- a/hut80.html
+++ b/hut80.html
@@ -16,7 +16,7 @@
   <header class="bg-blue-900 text-white py-6 shadow-md">
     <div class="container mx-auto px-4 flex items-center justify-between">
       <div class="flex items-center space-x-4">
-        <img src="../logo2.png" alt="Logo Desa Mangaris" class="w-14 h-14 rounded-full border-2 border-white">
+        <img src="logo2.png" alt="Logo Desa Mangaris" class="w-14 h-14 rounded-full border-2 border-white">
         <div>
           <h1 class="text-xl font-bold">Kegiatan Tambahan</h1>
           <p class="text-sm">KKN Reguler I Universitas Palangka Raya 2025 - Kelompok 5</p>
@@ -38,15 +38,15 @@
 <div class="grid grid-cols-1 md:grid-cols-3 gap-6 justify-items-center">
   <!-- Baris 1 (3 foto) -->
   <div class="w-40 h-40 overflow-hidden">
-    <img src="../lomba 1.jpg" alt="Foto 1" class="w-full h-full object-cover"
+    <img src="lomba 1.jpg" alt="Foto 1" class="w-full h-full object-cover"
          style="clip-path: circle">
   </div>
   <div class="w-40 h-40 overflow-hidden">
-    <img src="../lomba 2.jpg" alt="Foto 2" class="w-full h-full object-cover"
+    <img src="lomba 2.jpg" alt="Foto 2" class="w-full h-full object-cover"
          style="clip-path: circle">
   </div>
   <div class="w-40 h-40 overflow-hidden">
-    <img src="../lomba 3.jpg" alt="Foto 3" class="w-full h-full object-cover"
+    <img src="lomba 3.jpg" alt="Foto 3" class="w-full h-full object-cover"
          style="clip-path: circle">
   </div>
 </div>
@@ -54,11 +54,11 @@
 <div class="grid grid-cols-1 md:grid-cols-3 gap-6 justify-items-center">
   <!-- Baris 2 (2 foto) -->
   <div class="flex justify-center mt-6">
-    <img src="../lomba 4.jpg" alt="Foto 4" class="w-full h-full object-cover"
+    <img src="lomba 4.jpg" alt="Foto 4" class="w-full h-full object-cover"
          style="clip-path: circle">
   </div>
   <div class="flex justify-center mt-6">
-    <img src="../hut 5.jpg" alt="Foto 5" class="w-full h-full object-cover"
+    <img src="hut 5.jpg" alt="Foto 5" class="w-full h-full object-cover"
          style="clip-path: circle">
   </div>
 </div>
@@ -76,3 +76,4 @@
 
 </body>
 </html>
+
