--- a/kenangkenangan-sekolah.html
+++ b/kenangkenangan-sekolah.html
@@ -16,7 +16,7 @@
   <header class="bg-blue-900 text-white py-6 shadow-md">
     <div class="container mx-auto px-4 flex items-center justify-between">
       <div class="flex items-center space-x-4">
-        <img src="../logo2.png" alt="Logo Desa Mangaris" class="w-14 h-14 rounded-full border-2 border-white">
+        <img src="logo2.png" alt="Logo Desa Mangaris" class="w-14 h-14 rounded-full border-2 border-white">
         <div>
           <h1 class="text-xl font-bold">Proker Tambahan</h1>
           <p class="text-sm">KKN Reguler I Universitas Palangka Raya 2025 - Kelompok 5</p>
@@ -75,3 +75,4 @@
 
 </body>
 </html>
+
