--- a/penanaman-pohon.html
+++ b/penanaman-pohon.html
@@ -16,7 +16,7 @@
   <header class="bg-blue-900 text-white py-6 shadow-md">
     <div class="container mx-auto px-4 flex items-center justify-between">
       <div class="flex items-center space-x-4">
-        <img src="../logo2.png" alt="Logo Desa Mangaris" class="w-14 h-14 rounded-full border-2 border-white">
+        <img src="logo2.png" alt="Logo Desa Mangaris" class="w-14 h-14 rounded-full border-2 border-white">
         <div>
           <h1 class="text-xl font-bold">Inovasi dan Implementasi Program Lingkungan</h1>
           <p class="text-sm">KKN Reguler I Universitas Palangka Raya 2025 - Kelompok 5</p>
@@ -38,7 +38,7 @@
     <!-- Dokumentasi gambar -->
     <h3 class="text-xl font-semibold text-blue-700 mb-4">Dokumentasi Kegiatan</h3>
     <div class="flex justify-center mt-6">
-       <img src="../nanam phon.jpg" alt="Foto kegiatan 1"  class="rounded-lg shadow-md w-full" width="30%" height="30%">
+       <img src="nanam phon.jpg" alt="Foto kegiatan 1"  class="rounded-lg shadow-md w-full" width="30%" height="30%">
     </div>
 
  <!-- Jadwal -->
@@ -74,4 +74,5 @@
   </footer>
 
 </body>
+
 </html>
