--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
         Desa Mangaris berdiri pada tahun 1963. Desa ini merupakan desa yang terbentuk sebagai pindahan dari mangaris lama. Penduduknya mayoritas beragama kristen, dan bersuku dayak Ma'anyan dengan tradisi dan budaya yang terus dilestarikan hingga sekarang. Penduduknya rata-rata bekerja sebagai pegawai di pabrik dan bertani.
         Desa Mangaris terletak di Kecamatan Dusun Selatan, Kabupaten Barito selatan, Provinsi Kalimanan Tengah, dengan luas wilayah sekitar 40.000 hektare.
       </p>
+     <ul class="list-disc list-inside text-gray-700 mb-10">
+        Nah, mimin mengajak kawan-kawan buat kepoin nih apa aja sih program kerja yang kami selama KKN di Desa Mangaris, sebenarnya masih baaanyaak sekali
+       kegiatan yang tidak terdokumentasikan disini tapi mimin harap kalian enjoy ya. let's watch us!
+   </ul>
     </div>
   </section>
 
@@ -159,3 +163,4 @@
   </div>
 
 </footer>
+
