--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
         Desa Mangaris berdiri pada tahun 1963. Desa ini merupakan desa yang terbentuk sebagai pindahan dari mangaris lama. Penduduknya mayoritas beragama kristen, dan bersuku dayak Ma'anyan dengan tradisi dan budaya yang terus dilestarikan hingga sekarang. Penduduknya rata-rata bekerja sebagai pegawai di pabrik dan bertani.
         Desa Mangaris terletak di Kecamatan Dusun Selatan, Kabupaten Barito selatan, Provinsi Kalimanan Tengah, dengan luas wilayah sekitar 40.000 hektare.
       </p>
-      <p class="text-gray-700 leading-relaxed">
-        Nah, mimin mengajak kawan-kawan buat kepoin nih apa aja sih program kerja yang kami selama KKN di Desa Mangaris, sebenarnya masih baaanyaak sekali
-       kegiatan yang tidak terdokumentasikan disini tapi mimin harap kalian enjoy ya. let's watch us!
+      <p class="text-gray-700 max-w-2xl mx-auto leading-relaxed">
+        Nah, mimin mau ngajak kawan-kawan semua buat kepoin lebih jauh nih tentang apa aja program kerja yang udah kami lakuin selama KKN 
+        di Desa Mangaris. Sebenarnya kegiatan kami itu banyak banget dan nggak semuanya bisa terdokumentasikan di sini, mulai dari kegiatan 
+        bareng anak-anak sekolah, aktivitas bareng masyarakat, sampai kegiatan seru-seruan. Tapi lewat rangkuman ini, mimin harap kalian bisa 
+        ikut ngerasain keseruan dan manfaat dari setiap kegiatan yang udah kami jalanin. So, let’s watch us!
       </p>
     </div>
   </section>
@@ -163,5 +165,6 @@
   </div>
 
 </footer>
+
 
 
