--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
   <section class="py-12">
     <div class="container mx-auto px-4">
       <h3 class="text-2xl font-bold text-blue-800 mb-6">Profil Desa</h3>
-      <p class="text-gray-700 leading-relaxed">
+      <p class="text-gray-700 leading-relaxed mb-4">
         Desa Mangaris berdiri pada tahun 1963. Desa ini merupakan desa yang terbentuk sebagai pindahan dari mangaris lama. Penduduknya mayoritas beragama kristen, dan bersuku dayak Ma'anyan dengan tradisi dan budaya yang terus dilestarikan hingga sekarang. Penduduknya rata-rata bekerja sebagai pegawai di pabrik dan bertani.
         Desa Mangaris terletak di Kecamatan Dusun Selatan, Kabupaten Barito selatan, Provinsi Kalimanan Tengah, dengan luas wilayah sekitar 40.000 hektare.
       </p>
-      <p class="text-gray-700 max-w-2xl mx-auto leading-relaxed">
+      <p class="text-gray-700 leading-relaxed">
         Nah, mimin mau ngajak kawan-kawan semua buat kepoin lebih jauh nih tentang apa aja program kerja yang udah kami lakuin selama KKN 
         di Desa Mangaris. Sebenarnya kegiatan kami itu banyak banget dan nggak semuanya bisa terdokumentasikan di sini, mulai dari kegiatan 
         bareng anak-anak sekolah, aktivitas bareng masyarakat, sampai kegiatan seru-seruan. Tapi lewat rangkuman ini, mimin harap kalian bisa 
@@ -165,6 +165,7 @@
   </div>
 
 </footer>
+
 
 
 
