--- a/hut80.html
+++ b/hut80.html
@@ -37,21 +37,20 @@
     <!-- Dokumentasi gambar -->
 <div class="grid grid-cols-1 md:grid-cols-3 gap-6 justify-items-center">
   <!-- Baris 1 (3 foto) -->
-  <div class="w-40 h-40 overflow-hidden">
+  <div class="flex justify-center mt-6">
     <img src="lomba 1.jpg" alt="Foto 1" class="w-full h-full object-cover"
          style="clip-path: circle">
   </div>
-  <div class="w-40 h-40 overflow-hidden">
+  <div class="flex justify-center mt-6">
     <img src="lomba 2.jpg" alt="Foto 2" class="w-full h-full object-cover"
          style="clip-path: circle">
   </div>
-  <div class="w-40 h-40 overflow-hidden">
+  <div class="flex justify-center mt-6">
     <img src="lomba 3.jpg" alt="Foto 3" class="w-full h-full object-cover"
          style="clip-path: circle">
   </div>
 </div>
 
-<div class="grid grid-cols-1 md:grid-cols-3 gap-6 justify-items-center">
   <!-- Baris 2 (2 foto) -->
   <div class="flex justify-center mt-6">
     <img src="lomba 4.jpg" alt="Foto 4" class="w-full h-full object-cover"
@@ -76,4 +75,5 @@
 
 </body>
 </html>
+
 
