--- a/papan-edukasi.html
+++ b/papan-edukasi.html
@@ -42,7 +42,13 @@
       <img src="papan 2.jpg" alt="Foto kegiatan 2" class="rounded-lg shadow-md w-full" width="50%" height="50%>
       div>
 
-
+<div class="flex flex-col space-y-3 mt-6">
+  <p class="text-gray-600"></p>
+  <p class="text-gray-600"></p>
+  <a href="index.html" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition w-fit">
+    
+  </a>
+</div>
 
    <!-- Jadwal -->
    <h3 gap-6 mb-10 class="text-xl font-semibold text-blue-700 mb-4"></h3>
@@ -75,5 +81,6 @@
 
 </body>
 </html>
+
 
 
