--- a/kenangkenangan-sekolah.html
+++ b/kenangkenangan-sekolah.html
@@ -37,8 +37,8 @@
     <!-- Dokumentasi gambar -->
     <h3 class="text-xl font-semibold text-blue-700 mb-4">Dokumentasi Kegiatan</h3>
     <div class="flex space-x-4">
-      <img src="../mengias tk.jpg" alt="Foto kegiatan 1" class="rounded-lg shadow-md w-full" width="30%" height="50%"> 
-      <img src="../memasang spanduk.jpg" alt="Foto kegiatan 2" class="rounded-lg shadow-md w-full" width="30%" height="50%>
+      <img src="mengias tk.jpg" alt="Foto kegiatan 1" class="rounded-lg shadow-md w-full" width="30%" height="50%"> 
+      <img src="memasang spanduk.jpg" alt="Foto kegiatan 2" class="rounded-lg shadow-md w-full" width="30%" height="50%>
       div>
 
 
@@ -75,4 +75,5 @@
 
 </body>
 </html>
+
 
